--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head> 
   </head> 
   <body>
-    <a src="https://sstamoulas.github.io/CSS-Cheat-Sheet/button-ripple.html">Button Ripple</a>
+    <a href="https://sstamoulas.github.io/CSS-Cheat-Sheet/button-ripple.html">Button Ripple</a>
   </body> 
 </html> 
