--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head> 
   <body>
     <a href="https://sstamoulas.github.io/CSS-Cheat-Sheet/button-ripple.html">Button Ripple</a>
+    <a href="https://sstamoulas.github.io/CSS-Cheat-Sheet/image-magnifier-glass.html">Image Magnifier Glass</a>
   </body> 
 </html> 
